[package]
name = "axia-simnet"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
benchmarking = { package = "frame-benchmarking", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

test-runner = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

axia-primitives = { path = "../../../../primitives" }
axia-cli = { path = "../../../../cli", features = ["cli"] }
axia-service = { path = "../../../../node/service" }
axia-runtime = { path = "../../../../runtime/axia" }
axia-runtime-common = { path = "../../../../runtime/common" }

codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.23"

[dev-dependencies]
log = "0.4.14"
